--- a/CreativeCollabMusicalRecipes/Views/Shared/_Layout.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Shared/_Layout.cshtml
@@ -6,23 +6,25 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Recipe Management App", "List", "Recipe", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Recipes", "List", "Recipe", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Ingredients", "List", "Ingredient", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Instructions", "List", "Instruction", new { area = "" }, new { @class = "nav-link" })</li>
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Recipe", new { area = "" }, new { @class = "nav-link" })</li>*@
                 </ul>
-                 @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </nav>
