Fixed Music academy issues

--- a/CreativeCollabMusicalRecipes/Views/Academy/DeleteConfirm.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/DeleteConfirm.cshtml
@@ -13,5 +13,5 @@
 <form action="/Academy/Delete/@Model.AcademyId" method="POST">
     <p class="fw-bold">This Action cannot be undone</p>
     <input class="btn btn-danger" type="submit" value="Confirm Delete" />
-    <a href="@Url.Action("List", "Academy")" class="btn btn-secondary">Back to List</a>
+    <a href="/Academy/List" class="btn btn-secondary">Back to List</a>
 </form>
