--- a/CreativeCollabMusicalRecipes/Views/Academy/List.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/List.cshtml
@@ -18,4 +18,4 @@
 
     <p>Academy Address: @academy.AcademyAddress</p>
 }
-<a href="@Url.Action("List", "Academy")" class="btn btn-secondary">Add lesson</a>
+<a href="/Academy/New" class="btn btn-secondary">Add lesson</a>
