--- a/CreativeCollabMusicalRecipes/Views/Academy/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/New.cshtml
@@ -14,8 +14,8 @@
             <input type="text" name="AcademyAddress" class="form-control" />
         </div>
         <div class="form-group mt-4">
-            <button class="btn btn-primary" type="submit">Add Instructor</button>
-            <a href="@Url.Action("List", "Academy")" class="btn btn-secondary">Back to List</a>
+            <button class="btn btn-primary" type="submit">Add Academy</button>
+            <a href="/Academy/List" class="btn btn-secondary">Back to List</a>
         </div>
     </form>
 </div>
