--- a/CreativeCollabMusicalRecipes/Views/Shared/_Layout.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Shared/_Layout.cshtml
@@ -22,6 +22,10 @@
                     <li>@Html.ActionLink("Recipes", "List", "Recipe", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Ingredients", "List", "Ingredient", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Instructions", "List", "Instruction", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Academy", "List", "Academy", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Instructor", "List", "Instructor", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Lesson", "List", "Lesson", new { area = "" }, new { @class = "nav-link" })</li>
+
                     @*<li>@Html.ActionLink("Contact", "Contact", "Recipe", new { area = "" }, new { @class = "nav-link" })</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
