--- a/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
@@ -21,5 +21,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save Academy</button>
-    <a href="@Url.Action("List", "Academy")" class="btn btn-secondary">Back to List</a>
+    <a href="/Academy/List" class="btn btn-secondary">Back to List</a>
 </form>
