--- a/CreativeCollabMusicalRecipes/Views/Instructor/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Instructor/Edit.cshtml
@@ -41,5 +41,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save Instructor</button>
-    <a href="@Url.Action("List", "Instructor")" class="btn btn-secondary">Back to List</a>
+    <a href="/Instructor/List" class="btn btn-secondary">Back to List</a>
 </form>
