--- a/CreativeCollabMusicalRecipes/Views/Instructor/List.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Instructor/List.cshtml
@@ -21,5 +21,5 @@
             </div>
         </div>
     }
-    <a href="@Url.Action("New", "Instructor")" class="btn btn-secondary mt-3">Add Instructor</a>
+    <a href="/Instructor/New" class="btn btn-secondary mt-3">Add Instructor</a>
 </div>
