--- a/CreativeCollabMusicalRecipes/Views/Instructor/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Instructor/New.cshtml
@@ -31,7 +31,7 @@
         </div>
         <div class="form-group mt-4">
             <button class="btn btn-primary" type="submit">Add Instructor</button>
-            <a href="@Url.Action("List", "Instructor")" class="btn btn-secondary">Back to List</a>
+            <a href="/Instructor/List" class="btn btn-secondary">Back to List</a>
         </div>
     </form>
 </div>
