--- a/CreativeCollabMusicalRecipes/Views/Lesson/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/Edit.cshtml
@@ -29,5 +29,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Save Lesson</button>
-    <a href="@Url.Action("List", "Lesson")" class="btn btn-secondary">Back to List</a>
+    <a href="/Lesson/List" class="btn btn-secondary">Back to List</a>
 </form>
