--- a/CreativeCollabMusicalRecipes/Views/Lesson/List.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/List.cshtml
@@ -23,4 +23,4 @@
     <p>End Date: @lesson.EndDate</p>
     <p>Lesson ID: @lesson.LessonID </p>
 }
-<a href="@Url.Action("New", "Lesson")" class="btn btn-secondary">Add lesson</a>
+<a href="/Lesson/New" class="btn btn-secondary">Add lesson</a>
