--- a/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group mt-4">
             <button type="submit" class="btn btn-primary mr-2">Add Lesson</button>
-            <a href="@Url.Action("List", "Lesson")" class="btn btn-secondary">Back to List</a>
+            <a href="/Lesson/List" class="btn btn-secondary">Back to List</a>
         </div>
     </form>
 </div>
