New updates on Academy, Instructor and Lesson

--- a/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit Instructor";
 }
 
-<h2>Edit Instructor</h2>
+<h2>Edit Academy</h2>
 
 @*Editing Instructor information*@
 <form action="/Academy/Update/@Model.AcademyId" method="post">
