--- a/CreativeCollabMusicalRecipes/Views/Academy/List.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/List.cshtml
@@ -10,7 +10,7 @@
 
     //var instructorDetailsUrl = "/Academy/Details/";
     <p>
-        <span class="font-weight-bold" style="font-size: 18px;">Lesson Name:</span>
+        <span class="font-weight-bold" style="font-size: 18px;">Academy Name:</span>
         <a href="/Academy/Details/@academy.AcademyId" class="text-primary f-w-bold">
             @academy.AcademyName
         </a>
