--- a/CreativeCollabMusicalRecipes/Views/Academy/DeleteConfirm.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/DeleteConfirm.cshtml
@@ -5,9 +5,9 @@
 
 @*confirm delete using the ID*@
 <h2>Are you sure you want to delete this Lesson?</h2>
-<h3>Instructor Number:</h3>
+<h3>Academy Name:</h3>
 <p>@Model.AcademyName </p>
-<h3>Instructor Name:</h3>
+<h3>Academy Address:</h3>
 <p> @Model.AcademyAddress: </p>
 
 <form action="/Academy/Delete/@Model.AcademyId" method="POST">
