--- a/CreativeCollabMusicalRecipes/Views/Lesson/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/Edit.cshtml
@@ -24,8 +24,8 @@
     </div>
 
     <div class="form-group">
-        <label for="InstructorId">Instructor Id</label>
-        <input type="number" class="form-control" id="InstructorId" name="InstructorId" value="@Model.InstructorId" />
+        <label for="InstructorId">Instructor Name</label>
+        <input type="text" class="form-control" id="InstructorId" name="InstructorId" value="@Model.InstructorId  @Model.FirstName" />
     </div>
 
     <button type="submit" class="btn btn-primary">Save Lesson</button>
