--- a/CreativeCollabMusicalRecipes/Views/Home/Index.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Home/Index.cshtml
@@ -2,32 +2,44 @@
     ViewBag.Title = "Home Page";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
-
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
+<div class="container mt-5">
+    <div class="row mb-3">
+        <div class="col-md-12">
+            <h1 class="display-1 p-4 m-2 bg-secondary text-light rounded">Welcome to Musical-Recipies</h1>
+        </div>
     </div>
-</main>
+    <div class="row container my-5 py-2">
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Recipes List", "List", "Recipe", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Ingredients List", "List", "Ingredient", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Instructions List", "List", "Instruction", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Academy List", "List", "Academy", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Instructor List", "List", "Instructor", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+        <div class="col-md-2">
+            <div class="btn btn-primary">@Html.ActionLink("Lesson List", "List", "Lesson", new { area = "" }, new { @class = "nav-link" })</div>
+        </div>
+    </div>
+    <div class="row container ">
+        <div class="d-flex justify-content-center">
+            <div class="">Total Lessons: </div>
+            <div class="ps-1">11</div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="">Total Recipes: </div>
+            <div class="ps-1">11</div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="">Total Instructors: </div>
+            <div class="ps-1">11</div>
+        </div>
+    </div>
+</div>
