--- a/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@model IEnumerable<CreativeCollabMusicalRecipes.Models.LessonDto>
+﻿@model IEnumerable<CreativeCollabMusicalRecipes.Models.RecipeDto>
 @{
     ViewBag.Title = "Create";
 }
@@ -21,9 +21,37 @@
             <label>Instructor Id</label>
             <input type="number" name="InstructorId" class="form-control" />
         </div>
+        <div class="form-group">
+            <label>Type</label>
+            <select id="lessonType" name="Type" class="form-control">
+                <option value="Lesson">Lesson</option>
+                <option value="Recipe">Recipe</option>
+            </select>
+        </div>
+        <div class="form-group" id="recipeDropdown" style="display: none;">
+            <label>Select Recipe</label>
+            <select name="RecipeId" class="form-control">
+                <option value="NULL">-- Select a Recipe --</option>
+                @foreach (var recipe in Model)
+                {
+                    <option value="@recipe.RecipeId">@recipe.Title</option>
+                }
+            </select>
+        </div>
         <div class="form-group mt-4">
             <button type="submit" class="btn btn-primary mr-2">Add Lesson</button>
             <a href="/Lesson/List" class="btn btn-secondary">Back to List</a>
         </div>
     </form>
 </div>
+
+<script>
+    document.getElementById('lessonType').addEventListener('change', function () {
+        var recipeDropdown = document.getElementById('recipeDropdown');
+        if (this.value === 'Recipe') {
+            recipeDropdown.style.display = 'block';
+        } else {
+            recipeDropdown.style.display = 'none';
+        }
+    });
+</script>
