--- a/CreativeCollabMusicalRecipes/Views/Instructor/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Instructor/New.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "NewInstructor";
 }
 
+@*Create Instructor*@
 <h2 class="text-center">Create Instructor</h2>
 <div class="container">
     <form action="/Instructor/Create" method="Post" class="col-md-6 mx-auto">
