--- a/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Academy/Edit.cshtml
@@ -3,23 +3,27 @@
     ViewBag.Title = "Edit Instructor";
 }
 
-<h2>Edit Academy</h2>
+<h2 class="text-center">Edit Academy</h2>
 
-@*Editing Instructor information*@
-<form action="/Academy/Update/@Model.AcademyId" method="post">
+<div class="d-flex justify-content-center align-content-center" >
 
-    <input type="hidden" name="AcademyId" value="@Model.AcademyId" />
+    @*Editing Instructor information*@
+    <form action="/Academy/Update/@Model.AcademyId" method="post">
 
-    <div class="form-group">
-        <label for="AcademyName">Academy Name</label>
-        <input type="text" class="form-control" id="AcademyName" name="AcademyName" value="@Model.AcademyName" required />
-    </div>
+        <input type="hidden" name="AcademyId" value="@Model.AcademyId" />
 
-    <div class="form-group">
-        <label for="AcademyAddress">Academy Address</label>
-        <input type="text" class="form-control" id="AcademyAddress" name="AcademyAddress" value="@Model.AcademyAddress" required />
-    </div>
+        <div class="form-group">
+            <label for="AcademyName">Academy Name</label>
+            <input type="text" class="form-control" id="AcademyName" name="AcademyName" value="@Model.AcademyName" required />
+        </div>
 
-    <button type="submit" class="btn btn-primary">Save Academy</button>
-    <a href="/Academy/List" class="btn btn-secondary">Back to List</a>
-</form>
+        <div class="form-group">
+            <label for="AcademyAddress">Academy Address</label>
+            <input type="text" class="form-control" id="AcademyAddress" name="AcademyAddress" value="@Model.AcademyAddress" required />
+        </div>
+        <div class="mt-3">
+            <button type="submit" class="btn btn-primary">Save Academy</button>
+            <a href="/Academy/List" class="btn btn-secondary">Back to List</a>
+        </div>
+    </form>
+</div>
