--- a/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Lesson/New.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Create";
 }
+@*create new lesson*@
 <h2 class="text-center">Create Lesson</h2>
 <div class="container">
     <form action="/Lesson/Create" method="Post" class="mx-auto col-md-6">
@@ -24,11 +25,11 @@
         <div class="form-group">
             <label>Type</label>
             <select id="lessonType" name="Type" class="form-control">
-                <option value="Lesson">Lesson</option>
-                <option value="Recipe">Recipe</option>
+                <option value="Lesson">Music Lesson</option>
+                <option value="Recipe">Recipe Lesson</option>
             </select>
         </div>
-        <div class="form-group" id="recipeDropdown" style="display: none;">
+        <div class="form-group mt-2" id="recipeDropdown" style="display: none;">
             <label>Select Recipe</label>
             <select name="RecipeId" class="form-control">
                 <option value="NULL">-- Select a Recipe --</option>
