--- a/CreativeCollabMusicalRecipes/Views/Home/Index.cshtml
+++ b/CreativeCollabMusicalRecipes/Views/Home/Index.cshtml
@@ -1,11 +1,13 @@
-﻿@{
+﻿@model CreativeCollabMusicalRecipes.Models.ViewModels.TotalsViewModel
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="container mt-5">
     <div class="row mb-3">
         <div class="col-md-12">
-            <h1 class="display-1 p-4 m-2 bg-secondary text-light rounded">Welcome to Musical-Recipies</h1>
+            <h1 class="display-1 p-4 m-2 bg-secondary text-light rounded">Welcome to Musical-Recipes</h1>
         </div>
     </div>
     <div class="row container my-5 py-2">
@@ -28,18 +30,18 @@
             <div class="btn btn-primary">@Html.ActionLink("Lesson List", "List", "Lesson", new { area = "" }, new { @class = "nav-link" })</div>
         </div>
     </div>
-    <div class="row container ">
+    <div class="row container">
         <div class="d-flex justify-content-center">
             <div class="">Total Lessons: </div>
-            <div class="ps-1">11</div>
+            <div class="ps-1">@Model.TotalLessons</div>
         </div>
         <div class="d-flex justify-content-center">
             <div class="">Total Recipes: </div>
-            <div class="ps-1">11</div>
+            <div class="ps-1">@Model.TotalRecipes</div>
         </div>
         <div class="d-flex justify-content-center">
             <div class="">Total Instructors: </div>
-            <div class="ps-1">11</div>
+            <div class="ps-1">@Model.TotalInstructors</div>
         </div>
     </div>
 </div>
